RESOLVED FIXED123778
internal-js-tests.yaml/Octane/stress-tests/pdfjs.js.default: ASSERTION FAILED: m_state.forNode(child).m_futurePossibleStructure.isSubsetOf(StructureSet(structure)) at DFGConstantFoldingPhase.cpp:249
https://bugs.webkit.org/show_bug.cgi?id=123778
Summary internal-js-tests.yaml/Octane/stress-tests/pdfjs.js.default: ASSERTION FAILED...
Filip Pizlo
Reported 2013-11-04 20:11:10 PST
This is likely to be an overzealous assertion.
Attachments
the patch (2.31 KB, patch)
2013-11-04 20:30 PST, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2013-11-04 20:18:53 PST
Heh, this is obviously a wrong assertion. We do an execute() above it. It is asserting that if we need a watchpoint (i.e. the best proven structure was not the current structure) then it must be the future possible structure. But while that may have been true before execute(), it won't be true after.
Filip Pizlo
Comment 2 2013-11-04 20:30:25 PST
Created attachment 215992 [details] the patch
Geoffrey Garen
Comment 3 2013-11-04 21:36:09 PST
Comment on attachment 215992 [details] the patch r=me
Filip Pizlo
Comment 4 2013-11-04 21:40:08 PST
Note You need to log in before you can comment on or make changes to this bug.