internal-js-tests.yaml/Octane/stress-tests/pdfjs.js.default: ASSERTION FAILED: m_state.forNode(child).m_futurePossibleStructure.isSubsetOf(StructureSet(structure)) at DFGConstantFoldingPhase.cpp:249 https://bugs.webkit.org/show_bug.cgi?id=123778

Reviewed by Geoffrey Garen.

This assertion was just wrong: ee do an execute() above the assertion. The assertion
is asserting that if we need a watchpoint (i.e. the best proven structure was not the
current structure) then it must be the future possible structure.  But while that may
have been true before execute(), it won't be true after if the PutById was a
transition. Of course, this can only happen in the concurrent JIT in which case the
code would be invalidated anyway since we would only transform the code in a way that
leveraged the lack of a transition if we inserted a watchpoint, in which case we
would realize that the watchpoint had been fired during compilation.

Since this requires concurrent JIT awesomeness, I don't know how to test it.

* dfg/DFGConstantFoldingPhase.cpp:
(JSC::DFG::ConstantFoldingPhase::foldConstants):



Canonical link: https://commits.webkit.org/141973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158646 268f45cc-cd09-0410-ab3c-d52691b4dbfc